# dyad

./: meson.build
src/: dyad.c
